Implemented Workflow action support

--- a/Sitecore.Flow/App_Config/Include/Sitecore.Flow.config
+++ b/Sitecore.Flow/App_Config/Include/Sitecore.Flow.config
@@ -8,5 +8,8 @@
         </postToFlow>
       </actions>
     </wffm>
+    <commands>
+      <command name="flow:showschema" type="Sitecore.Flow.Commands.ShowSchema, Sitecore.Flow"/>
+    </commands>
   </sitecore>
 </configuration>
