--- a/Sitecore.Flow/Sitecore.Flow.csproj
+++ b/Sitecore.Flow/Sitecore.Flow.csproj
@@ -227,6 +227,9 @@
     </None>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="sitecore\shell\Applications\Content Manager\Dialogs\Schema\Schema.xaml.xml">
+      <SubType>Designer</SubType>
+    </Content>
     <Content Include="sitecore\shell\Applications\Modules\Web Forms for Marketers\Dialogs\Action Editor\PostToFlow.xaml.xml">
       <SubType>Designer</SubType>
     </Content>
@@ -234,9 +237,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Actions\PostToFlow.cs" />
+    <Compile Include="Commands\ShowSchema.cs" />
+    <Compile Include="Dialogs\Pages\SchemaPage.cs" />
     <Compile Include="Dialogs\PostToFlowPage.cs" />
     <Compile Include="Extensions\ItemExtensions.cs" />
+    <Compile Include="Helpers\Requestor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Workflow\Actions\ItemFieldsToFlow.cs" />
   </ItemGroup>
   <ItemGroup />
   <PropertyGroup>
