Added ItemUrl to the list of item's fields

--- a/Sitecore.Flow/App_Config/Include/Sitecore.Flow.config
+++ b/Sitecore.Flow/App_Config/Include/Sitecore.Flow.config
@@ -11,5 +11,8 @@
     <commands>
       <command name="flow:showschema" type="Sitecore.Flow.Commands.ShowSchema, Sitecore.Flow"/>
     </commands>
+    <settings>
+      <setting name="Sitecore.Flow.Actions.ServerUrl" value="http://sc82" />
+    </settings>
   </sitecore>
 </configuration>
