--- a/Sitecore.Flow/packages.config
+++ b/Sitecore.Flow/packages.config
@@ -7,10 +7,10 @@
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net452" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.Extensions.DependencyInjection" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.Extensions.DependencyInjection.Abstractions" version="1.0.0" targetFramework="net452" />
-  <package id="Microsoft.Net.Compilers" version="1.3.2" targetFramework="net452" developmentDependency="true" />
+  <package id="Microsoft.Net.Compilers" version="2.6.1" targetFramework="net462" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="RazorGenerator.Mvc" version="2.4.2" targetFramework="net452" />
@@ -28,6 +28,7 @@
   <package id="Sitecore.ContentSearch.Analytics" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.ContentSearch.Linq" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.ExperienceEditor" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.ExperienceForms.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Forms.Core" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Forms.Custom" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Kernel" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
@@ -55,9 +56,9 @@
   <package id="System.Linq" version="4.1.0" targetFramework="net452" />
   <package id="System.Linq.Expressions" version="4.1.0" targetFramework="net452" />
   <package id="System.Net.Http" version="4.0.0" targetFramework="net452" />
-  <package id="System.Reflection" version="4.1.0" targetFramework="net452" />
+  <package id="System.Reflection" version="4.1.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Resources.ResourceManager" version="4.0.1" targetFramework="net452" />
-  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net452" />
+  <package id="System.Runtime.Extensions" version="4.1.0" targetFramework="net452" requireReinstallation="true" />
   <package id="System.Threading" version="4.0.11" targetFramework="net452" />
   <package id="System.Threading.Tasks" version="4.0.11" targetFramework="net452" />
   <package id="WebActivatorEx" version="2.0.3" targetFramework="net452" />
