--- a/Sitecore.Flow/packages.config
+++ b/Sitecore.Flow/packages.config
@@ -28,6 +28,7 @@
   <package id="Sitecore.ContentSearch.Analytics" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.ContentSearch.Linq" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.ExperienceEditor" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.ExperienceForms.Mvc.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.ExperienceForms.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Forms.Core" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
   <package id="Sitecore.Forms.Custom" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
