--- a/Sitecore.Flow/packages.config
+++ b/Sitecore.Flow/packages.config
@@ -15,40 +15,14 @@
   <package id="Newtonsoft.Json" version="6.0.8" targetFramework="net452" />
   <package id="RazorGenerator.Mvc" version="2.4.2" targetFramework="net452" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net452" />
-  <package id="Sitecore.Abstractions" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics.Aggregation" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics.Automation" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics.Core" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics.DataAccess" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics.Model" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Analytics.Processing" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Client" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.ContentSearch" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.ContentSearch.Analytics" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.ContentSearch.Linq" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.ExperienceEditor" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Client.NoReferences" version="8.2.171121" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.ExperienceForms.Mvc.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.ExperienceForms.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
-  <package id="Sitecore.Forms.Core" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Forms.Custom" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Kernel" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.ListManagement" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.ListManagement.ContentSearch" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Logging" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Logging.Client" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Marketing" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Marketing.Core" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Marketing.Taxonomy" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Mvc" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.NVelocity" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.SegmentBuilder" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Web" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.WFFM.Abstractions" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.WFFM.Actions" version="8.2.170807" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Xdb.Client" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Xdb.Configuration" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
-  <package id="Sitecore.Zip" version="8.2.170728" targetFramework="net452" developmentDependency="true" />
+  <package id="Sitecore.Forms.Core.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Kernel.NoReferences" version="8.2.171121" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.WFFM.Abstractions.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.WFFM.Actions.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.WFFM.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
   <package id="System.Collections" version="4.0.11" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net452" />
