--- a/Sitecore.Flow/packages.config
+++ b/Sitecore.Flow/packages.config
@@ -20,9 +20,15 @@
   <package id="Sitecore.ExperienceForms.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Forms.Core.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.Kernel.NoReferences" version="8.2.171121" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Automation.Activity.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Automation.Models.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Marketing.Automation.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.WFFM.Abstractions.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.WFFM.Actions.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
   <package id="Sitecore.WFFM.NoReferences" version="8.2.171103" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.XConnect.Collection.Model.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.XConnect.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
+  <package id="Sitecore.Xdb.MarketingAutomation.Core.NoReferences" version="9.0.171219" targetFramework="net462" developmentDependency="true" />
   <package id="System.Collections" version="4.0.11" targetFramework="net452" />
   <package id="System.Collections.Concurrent" version="4.0.12" targetFramework="net452" />
   <package id="System.ComponentModel" version="4.0.1" targetFramework="net452" />
