--- a/Sitecore.Flow.MarketingAutomation.UI/package.json
+++ b/Sitecore.Flow.MarketingAutomation.UI/package.json
@@ -11,23 +11,24 @@
     "build": "webpack --display-error-details"
   },
   "dependencies": {
-    "@angular/common": "4.3.5",
-    "@angular/core": "4.3.5",
-    "@angular/forms": "4.3.5",
-    "@angular/http": "4.3.5",
-    "@angular/platform-browser": "4.3.5",
-    "@ngx-translate/core": "^7.2.0",
+    "@angular/common": "5.2.9",
+    "@angular/core": "5.2.9",
+    "@angular/forms": "5.2.9",
+    "@angular/http": "5.2.9",
+    "@angular/platform-browser": "5.2.9",
+    "@ngx-translate/core": "10.0.1",
     "@sitecore/ma-core": "file:C:/resourcefiles/ma-core",
-    "rxjs": "^5.4.3",
-    "zone.js": "^0.8.16"
+    "rxjs": "5.5.8",
+    "zone.js": "0.8.25"
   },
   "devDependencies": {
-    "@angular/compiler": "4.3.5",
-    "@angular/compiler-cli": "4.3.5",
-    "copyfiles": "^1.2.0",
-    "rimraf": "^2.6.1",
-    "ts-loader": "^2.3.4",
-    "typescript": "^2.4.2",
-    "webpack": "^3.5.5"
+    "@angular/compiler": "5.2.9",
+    "@angular/compiler-cli": "5.2.9",
+    "copyfiles": "2.0.0",
+    "rimraf": "2.6.2",
+    "ts-loader": "4.1.0",
+    "typescript": "2.8.1",
+    "webpack": "4.4.1",
+    "webpack-cli": "^2.0.13"
   }
 }
