--- a/Sitecore.Flow.MarketingAutomation.UI/src/tsconfig.aot.json
+++ b/Sitecore.Flow.MarketingAutomation.UI/src/tsconfig.aot.json
@@ -3,7 +3,7 @@
         "emitDecoratorMetadata": true,
         "experimentalDecorators": true,
         "target": "es5",
-        "module": "es2015",
+        "module": "commonjs",
         "moduleResolution": "node",
         "removeComments": true,
         "sourceMap": true,
